--- a/README.textile
+++ b/README.textile
@@ -1,4 +1,4 @@
-One of the projects I've made for the programing lecture. It is simple POC of distributed computing. It design allows to execute different mathematical operations on the different machines (only sum and multiplication is supported as I remember).
+One of the projects I've made in 2007 for the programing lecture at school. It is simple POC of distributed computing. It design allows to execute different mathematical operations on the different machines (only sum and multiplication is supported as I remember).
 
 ################################################################3
 
@@ -13,16 +13,27 @@ $ ./NetCalculusServer1223.bat
 $ ./NetCalculusServer1224.bat
 </pre>
 
-To polecenie wykonane w konsoli odpali serwer na porcie 1223 oraz na porcie 1224. Oczywiscie jeden serwer moze obsluzyc dwa dzialania i wystarczy ze w obu linijkach w aplikacji podamy ten sam adres serwera i ten sam port a aplikacja po polaczeniu zadziala na jednym tylko serwerze dzialan. Aby uruchomic drugi serwer wystarczy na tej samej (lub innej) maszynie wykonac analogiczna instrukce w konsoli. Port podajemy dowolny z zakresu 65535 (chyba). Po uruchomieniu serwera w konsoli 
+Lub te¿ bezpoœrednio z Javy (rowniez CygWin):
 
-Powinnismy zobaczyc:
+<pre>
+nohup "java -cp bin;lib\substance.jar com.sarxos.netcalculus.server.NetCalculusServer -port 1223" | tee -a calculus.log > /dev/null
+nohup "java -cp bin;lib\substance.jar com.sarxos.netcalculus.server.NetCalculusServer -port 1223" | tee -a calculus.log > /dev/null
+</pre>
+
+
+To polecenie wykonane w konsoli odpali serwer na porcie 1223 oraz na porcie 1224. Oczywiscie jeden serwer moze obsluzyc dwa dzialania i wystarczy ze w obu linijkach w aplikacji podamy ten sam adres serwera i ten sam port a aplikacja po polaczeniu zadziala na jednym tylko serwerze dzialan. Aby uruchomic drugi serwer wystarczy na tej samej (lub innej) maszynie wykonac analogiczna instrukce w konsoli. Port podajemy dowolny z zakresu 65535 (chyba). Po uruchomieniu serwera w logu powinnismy zobaczyc:
+
+<pre>
+$ tail -f calculus.log
+</pre>
 
 <pre>
 Calculus server started at port 1223 on Tue May 15 22:33:20 CEST 2007
+Calculus server started at port 1224 on Tue May 15 22:33:20 CEST 2007
 </pre>
 
 Podczas wykonywania dzialan w konsoli beda rowniez widoczne komendy ktore zostaly wykonane oraz to jakie dane do nich przekzalismy. 
 
 Tak wiec jesli mamy odpalone dwa serwery (powiedzmy na porcie 1223 i 1224) na localhost (lub 127.0.0.1 - IP tez zadziala) to odpalamy aplikacje klienta, wpisujemy dane i robimy polaczenie - klikamy na button z ikonka pioruna.
 
-Dalej juz tylko uzywac.
+Dalej juz tylko uzywac :) Enjoy!
